--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 'android-P'
+    compileSdkVersion 28
     buildToolsVersion "28.0.0-rc1"
 
     defaultConfig {
         applicationId "org.synergy"
         minSdkVersion 14
-        targetSdkVersion 27
+        targetSdkVersion 28
 
         ndk {
             moduleName "synergy-jni"
